# ConfigManager

./: README.md  pyproject.toml
src/ConfigManager/: __init__.py  __init__.pyi  config.pyi  file.py  file.pyi  main.py
tests/: __init__.py  config.py  file.py  main.py  test.config  test2.config
