[build-system]
requires = ["setuptools>=69.5.1"]
build-backend = "setuptools.build_meta"


[project]
name = "ConfigManager"
version = "0.0.0"
description = "This module introduces config management classes and functions."

readme = "README.md"
license = {file="LICENSE"}

authors = [
    {name="AtoKashinoki", email="atokashinoki@gmail.com"}
]

dependencies = [
    "Descriptors@git+https://github.com/AtoKashinoki/Descriptors.git",
]

requires-python = ">=3.12"

classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]


[project.urls]
"Homepage" = "https://github.com/AtoKashinoki/pygameapp"
"Bug Tracker" = "https://github.com/AtoKashinoki/pygameapp/issues"
